--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,93 @@
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
-		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
+		<java-version>1.8</java-version>
+		<org.springframework-version>5.2.18.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<nexacro.uiadapter.version>1.0.0-SNAPSHOT</nexacro.uiadapter.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>tobesoft</id>
+			<name>tobesoft-nexacro</name>
+			<url>http://mangosteen.tobesoft.co.kr/nexus/repository/maven-public/</url>
+		</repository>
+		<repository>
+			<id>OJDBC repo</id>
+			<url>http://www.datanucleus.org/downloads/maven2/</url>
+		</repository>
+	</repositories>
 	<dependencies>
+		<!-- Nexacro lib -->
+		<dependency>
+			<groupId>com.nexacro.uiadapter17.spring</groupId>
+			<artifactId>uiadapter17-spring-core</artifactId>
+			<version>${nexacro.uiadapter.version}</version>
+		</dependency>
+		<!-- oracle driver -->
+		<dependency>
+		    <groupId>oracle</groupId>
+		    <artifactId>ojdbc6</artifactId>
+		    <version>11.2.0.3</version>
+		</dependency>
+		<!-- GSON : List 데이터를 JSON 데이터로 변환해주는 라이브러리 -->
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		<!-- 파일 업로드 관련 라이브러리 -->
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>		
+		<!-- ojbc6.jar, mybatis, spring-mybatis, spring-jdbc, common-dbcp -->
+		<!-- 순수 mybatis -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.4.6</version>
+		</dependency>		
+		<!-- Spring에서 Mybatis를 사용할 수 있도록 하는 라이브러리 -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		<!-- Spring에서 JDBC를 사용하는데 DataSource를 사용하도록 해주는 라이브러리 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>${org.springframework-version}</version>
+		    <!-- 위 properties의 지정한 Spring 버전을 따라감 -->
+		</dependency>
+		<!-- 커넥션 풀 기능을 사용하기 위한 라이브러리 -->
+		<!-- 데이터베이스 커넥션 풀이란? (DBCP)
+			DB연결이 필요할 때마다 생성하여 접속하는것이 아니라
+			Connection Pool에 연결을 생성하여 놓고 재사용하는 방식 
+		-->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
