--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>.snu</url-pattern>
+		<url-pattern>*.snu</url-pattern>
 	</servlet-mapping>
 
 </web-app>
