--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>uiadapter17-spring-core</artifactId>
 			<version>${nexacro.uiadapter.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.13.2</version>
+</dependency>
 		
 		<!-- oracle driver -->
 		<dependency>
